--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -11,12 +11,20 @@ $color-white: rgb(247, 252, 207);
 
 html {
     min-height: 100vh;
+    font-size: 62.5%;
 }
 
 body {
     background-color: $color-white;
     color: #000;
     padding-top: 14vh;
+    font-size: 1.4rem;
+}
+
+#not-link:hover {
+    color: #fff;
+    cursor: text;
+    background: $color-primary;
 }
 
 .navbar-custom {
@@ -32,7 +40,7 @@ body {
 }
 
 .navbar-brand:hover {
-    color: #cdcdcd;
+    color: #000;
 }
 
 .nav a {
@@ -60,7 +68,7 @@ header {
 }
 
 h3 {
-    line-height: 2em;
+    line-height: .2rem;
 }
 
 .btn-xs {
@@ -110,13 +118,13 @@ h3 {
 }
 
 #camp-img {
-    border-radius: .5rem .5rem 0 0;
+    border-radius: .2rem .2rem 0 0;
     height: 65%;
     width: 100%;
 }
 
 #show-img {
-    border-radius: .5rem .5rem 0 0;
+    border-radius: .2rem .2rem 0 0;
     width: 100%;
     max-height: 500px;
 }
@@ -124,7 +132,7 @@ h3 {
 .thumbnail {
     padding: 0;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-    border-radius: .5rem;
+    border-radius: .2rem;
 }
 
 #thumbnail-main{
@@ -178,6 +186,7 @@ textarea {
     background-position: center;
     /* background-color: #cdcdcd; */
     color: #fff;
+    border-radius: .2rem;
 }
 
 /* .comment {
@@ -202,8 +211,9 @@ h3 {
 }
 
 footer {
+    height: 10rem;
     text-align: center;
-    padding: 10px;
+    padding-top: 5rem;
     font-size: .9em;
     font-weight: 200;
   }
