--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,10 +1,17 @@
 html {
-  min-height: 100vh; }
+  min-height: 100vh;
+  font-size: 62.5%; }
 
 body {
   background-color: #f7fccf;
   color: #000;
-  padding-top: 14vh; }
+  padding-top: 14vh;
+  font-size: 1.4rem; }
+
+#not-link:hover {
+  color: #fff;
+  cursor: text;
+  background: #3c9e3c; }
 
 .navbar-custom {
   background-color: #3c9e3c; }
@@ -16,7 +23,7 @@ body {
   color: #fff; }
 
 .navbar-brand:hover {
-  color: #cdcdcd; }
+  color: #000; }
 
 .nav a {
   color: #fff; }
@@ -38,7 +45,7 @@ header {
   animation: moveInRight 1s ease-out; }
 
 h3 {
-  line-height: 2em; }
+  line-height: .2rem; }
 
 .btn-xs {
   height: 20px; }
@@ -76,19 +83,19 @@ h3 {
   flex-wrap: wrap; }
 
 #camp-img {
-  border-radius: .5rem .5rem 0 0;
+  border-radius: .2rem .2rem 0 0;
   height: 65%;
   width: 100%; }
 
 #show-img {
-  border-radius: .5rem .5rem 0 0;
+  border-radius: .2rem .2rem 0 0;
   width: 100%;
   max-height: 500px; }
 
 .thumbnail {
   padding: 0;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-  border-radius: .5rem; }
+  border-radius: .2rem; }
 
 #thumbnail-main {
   box-shadow: 0 0.3rem 0.6rem rgba(0, 0, 0, 0.2);
@@ -131,7 +138,8 @@ textarea {
   background-size: cover;
   background-position: center;
   /* background-color: #cdcdcd; */
-  color: #fff; }
+  color: #fff;
+  border-radius: .2rem; }
 
 /* .comment {
     margin-top: 0;
@@ -151,8 +159,9 @@ h3 {
   line-height: 30px; }
 
 footer {
+  height: 10rem;
   text-align: center;
-  padding: 10px;
+  padding-top: 5rem;
   font-size: .9em;
   font-weight: 200; }
 
